@@ -1,6 +1,8 @@
 
 - Added win_sparkle_set_app_details() for setting app metadata from code,
   as an alternative to their extraction from resources.
+- It is no longer necessary to call win_sparkle_set_appcast_url(), the
+  feed can be specified in FeedURL resource with type set to APPCAST.
 
 Version 0.2
 -----------
